<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WeightActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_weight="0"
            android:background="@color/blue"
            android:title="@string/title_weight_activity"
            android:titleTextColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/deleteRecordButton"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:background="@color/blue"
                android:onClick="deleteRecordOnClick"
                android:paddingRight="15dp"
                app:srcCompat="@drawable/trash_can" />

            <ImageButton
                android:id="@+id/editRecordButton"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:background="@color/blue"
                android:onClick="editRecordOnClick"
                android:paddingRight="15dp"
                app:srcCompat="@drawable/pencil_edit" />

            <ImageButton
                android:id="@+id/addRecordButton"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:background="@color/blue"
                android:onClick="addRecordOnClick"
                android:paddingRight="15dp"
                app:srcCompat="@drawable/add_big" />
        </Toolbar>

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <TableLayout
                android:id="@+id/dailyWeightTable"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:stretchColumns="1">

                <TableRow
                    android:id="@+id/headerRow">

                    <TextView
                        android:id="@+id/headerDate"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:paddingTop="30dp"
                        android:paddingBottom="10dp"
                        android:text="@string/header_date"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/headerWeight"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:paddingTop="30dp"
                        android:paddingBottom="10dp"
                        android:text="@string/header_weight"
                        android:textColor="@color/black"
                        android:textStyle="bold" />


                </TableRow>

            </TableLayout>
        </ScrollView>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_weight="0"
            android:background="@color/blue"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="parent"
            tools:layout_editor_absoluteX="167dp">

            <TextView
                android:id="@+id/goalText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:gravity="center"
                android:text="@string/goal_text"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/goalWeightText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:gravity="center"
                android:text="@string/default_goal_weight"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/editTargetWeight_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/blue"
                android:gravity="center"
                android:onClick="editTargetOnClick"
                app:srcCompat="@drawable/pencil_edit" />

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>